# finacewith

./: .gitignore  INTERVIEW_QA.md  README.md  RESUME_PROJECT.doc  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
api/: chat.ts  debug.ts  health.ts
assets/: index-CH3U5eIQ.js  index-CoWiaQWO.css  index-D7pB2iFe.js
backend/: app.ts  db.ts  index.ts
backend/middleware/: auth.ts
backend/routes/: ai.ts  auth.ts  budgets.ts  expenses.ts  incomes.ts
public/: manifest.json  moneymate-intro.html  moneymate-showcase.html  sw.js
server/: config.ts  index.ts  types.ts
server/agents/: analyzer.ts  budgeter.ts  compliance.ts  educator.ts  recorder.ts  saver.ts  supervisor.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Layout.tsx
src/context/: AppContext.tsx  AuthContext.tsx
src/data/: mockData.ts
src/lib/: api.ts  supabase.ts
src/pages/: AIAssistant.tsx  Auth.tsx  Budget.tsx  Dashboard.tsx  ExpenseRecord.tsx  Onboarding.tsx  Statistics.tsx
src/types/: index.ts
supabase/: migration.sql
